Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-4946

Rare hang in buffer-pool-test

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Impala 2.9.0
    • Impala 2.9.0
    • Backend

    Description

      buffer-pool-test hung during execution.

      This is the commit where the hang happened:

      https://github.com/apache/incubator-impala/commit/894bb7785519f4f00d1af52e9c6602c43396503c

      The INFO logs are attached.

      Attachments

        1. buffer-pool-test.INFO
          25 kB
          Henry Robinson

        Activity

          People

            tarmstrong Tim Armstrong
            henryr Henry Robinson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: